// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Finder  [2016] 1 SLR 373  1`] = `
[
  {
    "abbr": "SLR",
    "citation": "[2016] 1 SLR 373",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2016",
  },
]
`;

exports[`Finder  [2018] SGHC 22 1`] = `
[
  {
    "abbr": "SGHC",
    "citation": "[2018] SGHC 22",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2018",
  },
]
`;

exports[`Finder (1754) 2 Ves Sen 547 1`] = `
[
  {
    "abbr": "Ves Sen",
    "citation": "(1754) 2 Ves Sen 547",
    "court": "Ves Sen",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "1754",
  },
]
`;

exports[`Finder (1951) 35 Cr App R 164 1`] = `
[
  {
    "abbr": "Cr App R",
    "citation": "(1951) 35 Cr App R 164",
    "court": "Cr App R",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "1951",
  },
]
`;

exports[`Finder (1973) 40 DLR (3d) 371 1`] = `
[
  {
    "citation": "(1973) 40 DLR (3d) 371",
    "index": 0,
    "jurisdiction": "CA",
    "type": "case-citation",
  },
]
`;

exports[`Finder (1982) 7 ACLR 171 1`] = `
[
  {
    "abbr": "ACLR",
    "citation": "(1982) 7 ACLR 171",
    "index": 0,
    "jurisdiction": "AU",
    "page": "171",
    "type": "case-citation",
    "year": "1982",
  },
]
`;

exports[`Finder (1990) 171 CLR 30 1`] = `
[
  {
    "abbr": "CLR",
    "citation": "(1990) 171 CLR 30",
    "index": 0,
    "jurisdiction": "AU",
    "page": "30",
    "type": "case-citation",
    "year": "1990",
  },
]
`;

exports[`Finder (1992) 7 ACSR 759 1`] = `
[
  {
    "abbr": "ACSR",
    "citation": "(1992) 7 ACSR 759",
    "index": 0,
    "jurisdiction": "AU",
    "page": "759",
    "type": "case-citation",
    "year": "1992",
  },
]
`;

exports[`Finder (2003) 200 ALJ 1 1`] = `
[
  {
    "abbr": "ALJ",
    "citation": "(2003) 200 ALJ 1",
    "index": 0,
    "jurisdiction": "AU",
    "page": "1",
    "type": "case-citation",
    "year": "2003",
  },
]
`;

exports[`Finder (2008) 91 OR (3d) 353 1`] = `
[
  {
    "citation": "(2008) 91 OR (3d) 353",
    "index": 0,
    "jurisdiction": "CA",
    "type": "case-citation",
  },
]
`;

exports[`Finder (2013) 16 HKCFAR 366 1`] = `
[
  {
    "citation": "(2013) 16 HKCFAR 366",
    "index": 0,
    "jurisdiction": "HK",
    "type": "case-citation",
  },
]
`;

exports[`Finder [1843-60] All ER 249 1`] = `
[
  {
    "abbr": "All ER",
    "citation": "[1843-60] All ER 249",
    "court": "All ER",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "1843",
  },
]
`;

exports[`Finder [1948] 1 KB 223 1`] = `
[
  {
    "abbr": "KB",
    "citation": "[1948] 1 KB 223",
    "court": "KB",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "1948",
  },
]
`;

exports[`Finder [1965] 1 QB 456 1`] = `
[
  {
    "abbr": "QB",
    "citation": "[1965] 1 QB 456",
    "court": "QB",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "1965",
  },
]
`;

exports[`Finder [1983] 4 WWR 762 1`] = `
[
  {
    "citation": "[1983] 4 WWR 762",
    "index": 0,
    "jurisdiction": "CA",
    "type": "case-citation",
  },
]
`;

exports[`Finder [1988] SGCA 16 1`] = `
[
  {
    "abbr": "SGCA",
    "citation": "[1988] SGCA 16",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "1988",
  },
]
`;

exports[`Finder [1989] HCA 9 1`] = `
[
  {
    "abbr": "HCA",
    "citation": "[1989] HCA 9",
    "index": 0,
    "jurisdiction": "AU",
    "page": "9",
    "type": "case-citation",
    "year": "1989",
  },
]
`;

exports[`Finder [1994] SGCA 128 1`] = `
[
  {
    "abbr": "SGCA",
    "citation": "[1994] SGCA 128",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "1994",
  },
]
`;

exports[`Finder [1999] 2 SCR 534 1`] = `
[
  {
    "citation": "[1999] 2 SCR 534",
    "index": 0,
    "jurisdiction": "CA",
    "type": "case-citation",
  },
]
`;

exports[`Finder [1999] HKCA 585 1`] = `
[
  {
    "citation": "[1999] HKCA 585",
    "index": 0,
    "jurisdiction": "HK",
    "type": "case-citation",
  },
]
`;

exports[`Finder [2000] 1 HKLRD 595 1`] = `
[
  {
    "citation": "[2000] 1 HKLRD 595",
    "index": 0,
    "jurisdiction": "HK",
    "type": "case-citation",
  },
]
`;

exports[`Finder [2001] 2 SLR 253 1`] = `
[
  {
    "abbr": "SLR",
    "citation": "[2001] 2 SLR 253",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2001",
  },
]
`;

exports[`Finder [2001] ECDR 5 1`] = `
[
  {
    "abbr": "ECDR",
    "citation": "[2001] ECDR 5",
    "court": "ECDR",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2001",
  },
]
`;

exports[`Finder [2006] SCC 39 1`] = `
[
  {
    "citation": "[2006] SCC 39",
    "index": 0,
    "jurisdiction": "CA",
    "type": "case-citation",
  },
]
`;

exports[`Finder [2007] UKHL 17 1`] = `
[
  {
    "abbr": "UKHL",
    "citation": "[2007] UKHL 17",
    "court": "UKHL",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2007",
  },
]
`;

exports[`Finder [2010] FCA 984 1`] = `
[
  {
    "abbr": "FCA",
    "citation": "[2010] FCA 984",
    "index": 0,
    "jurisdiction": "AU",
    "page": "984",
    "type": "case-citation",
    "year": "2010",
  },
]
`;

exports[`Finder [2011] 2 SLR 47 1`] = `
[
  {
    "abbr": "SLR",
    "citation": "[2011] 2 SLR 47",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2011",
  },
]
`;

exports[`Finder [2012] HKDC 911 1`] = `
[
  {
    "citation": "[2012] HKDC 911",
    "index": 0,
    "jurisdiction": "HK",
    "type": "case-citation",
  },
]
`;

exports[`Finder [2015] HKCFI 1856 1`] = `
[
  {
    "citation": "[2015] HKCFI 1856",
    "index": 0,
    "jurisdiction": "HK",
    "type": "case-citation",
  },
]
`;

exports[`Finder [2016] EWHC 3151 (IPEC) 1`] = `
[
  {
    "abbr": "EWHC",
    "citation": "[2016] EWHC 3151",
    "court": "EWHC",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2016",
  },
]
`;

exports[`Finder [2020] SGCA(I) 2 1`] = `
[
  {
    "abbr": "SGCA(I)",
    "citation": "[2020] SGCA(I) 2",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2020",
  },
]
`;

exports[`Finder [2020] SGDC 95 1`] = `
[
  {
    "abbr": "SGDC",
    "citation": "[2020] SGDC 95",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2020",
  },
]
`;

exports[`Finder [2020] SGHC 100 (2010) 1`] = `
[
  {
    "abbr": "SGHC",
    "citation": "[2020] SGHC 100",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2020",
  },
]
`;

exports[`Finder [2020] SGHC 228 1`] = `
[
  {
    "abbr": "SGHC",
    "citation": "[2020] SGHC 228",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2020",
  },
]
`;

exports[`Finder [2020] SGHCF 18 1`] = `
[
  {
    "abbr": "SGHCF",
    "citation": "[2020] SGHCF 18",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2020",
  },
]
`;

exports[`Finder [2021] EWHC 2168 (QB) 1`] = `
[
  {
    "abbr": "EWHC",
    "citation": "[2021] EWHC 2168",
    "court": "EWHC",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2021",
  },
]
`;

exports[`Finder [2021] SGCA 34 1`] = `
[
  {
    "abbr": "SGCA",
    "citation": "[2021] SGCA 34",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2021",
  },
]
`;

exports[`Finder [2022] SGHC(A) 17 1`] = `
[
  {
    "abbr": "SGHC(A)",
    "citation": "[2022] SGHC(A) 17",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2022",
  },
]
`;

exports[`Finder [2022] SGHCR 1 1`] = `
[
  {
    "abbr": "SGHCR",
    "citation": "[2022] SGHCR 1",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2022",
  },
]
`;

exports[`Finder [2022] SGIPOS 4 1`] = `
[
  {
    "abbr": "SGIPOS",
    "citation": "[2022] SGIPOS 4",
    "index": 0,
    "jurisdiction": "SG",
    "type": "case-citation",
    "year": "2022",
  },
]
`;

exports[`Finder 2008 ONCA 506 (CanLII) 1`] = `
[
  {
    "citation": "2008 ONCA 506",
    "index": 0,
    "jurisdiction": "CA",
    "type": "case-citation",
  },
]
`;

exports[`Finder 2022 SCC 38 (CanLII) 1`] = `
[
  {
    "citation": "2022 SCC 38",
    "index": 0,
    "jurisdiction": "CA",
    "type": "case-citation",
  },
]
`;

exports[`Finder BLO/555/22 1`] = `
[
  {
    "abbr": "UKIPO",
    "citation": "BLO/555/22",
    "court": "UKIPO",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2022",
  },
]
`;

exports[`Finder C-40/17 1`] = `
[
  {
    "citation": "C-40/17",
    "court": "CJEU",
    "index": 0,
    "jurisdiction": "EU",
    "type": "case-citation",
  },
]
`;

exports[`Finder Case C-5/08 1`] = `
[
  {
    "citation": "C-5/08",
    "court": "CJEU",
    "index": 2,
    "jurisdiction": "EU",
    "type": "case-citation",
  },
]
`;

exports[`Finder Case C-145/10 1`] = `
[
  {
    "citation": "C-145/10",
    "court": "CJEU",
    "index": 2,
    "jurisdiction": "EU",
    "type": "case-citation",
  },
]
`;

exports[`Finder Cases C-403/08 and C-429/08 1`] = `
[
  {
    "citation": "C-403/08",
    "court": "CJEU",
    "index": 6,
    "jurisdiction": "EU",
    "type": "case-citation",
  },
  {
    "citation": "C-429/08",
    "court": "CJEU",
    "index": 19,
    "jurisdiction": "EU",
    "type": "case-citation",
  },
]
`;

exports[`Finder O/002/22 1`] = `
[
  {
    "abbr": "UKIPO",
    "citation": "O/002/22",
    "court": "UKIPO",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2022",
  },
]
`;

exports[`Finder O/328/22 1`] = `
[
  {
    "abbr": "UKIPO",
    "citation": "O/328/22",
    "court": "UKIPO",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2022",
  },
]
`;

exports[`Finder O01422 1`] = `
[
  {
    "abbr": "UKIPO",
    "citation": "O01422",
    "court": "UKIPO",
    "index": 0,
    "jurisdiction": "UK",
    "type": "case-citation",
    "year": "2022",
  },
]
`;
